<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mweriwn.building.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnChairTxt"
        android:id="@+id/btnChair"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#000"
        android:textColor="#fff"
        android:textSize="45sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDresserTxt"
        android:id="@+id/btnDresser"
        android:layout_below="@+id/btnChair"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:textColor="#fff"
        android:textSize="45sp"
        android:background="#000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDogHouseTxt"
        android:id="@+id/btnDoghouse"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#000"
        android:textColor="#fff"
        android:textSize="45sp" />
</RelativeLayout>
